virt01/automated/mail/rspamd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rspamd-ingress
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: rspamd.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: rspamd-svc
            port:
              number: 11334
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rspamd.k3s.nf.lab
    secretName: rspamd-cert-tls
